added some coreos stuff, probably broken at this point

--- a/files/streams.conf
+++ b/files/streams.conf
@@ -7,3 +7,4 @@ stdout_logfile=/var/log/supervisor-streams.log
 stdout_logfile_maxbytes=0
 stopwaitsecs=90
 user=streamsadmin
+environment=USER=streamsadmin,LOGNAME=/streamsadmin,HOME=/home/streamsadmin
