--- a/coreos/streams@.service
+++ b/coreos/streams@.service
@@ -20,6 +20,9 @@ ExecStart=/bin/bash -c '\
     --privileged \
     -p 8443:8443 \
     -p 22 \
+    -e ETCD_URL=http://${COREOS_PRIVATE_IPV4}:4001/v2 \
+    -e STREAMS_DOMAIN_COMMAND=start-domain \
+    -e STREAMS_INSTANCE_COMMAND=start-instance \
     -e STREAMS_TAGS=management,application \
     -e STREAMS_ZKCONNECT=zookeeper.skydns.local:2181 \
     -e SERVICE_NAME=%p-%i \
