--- a/files/streams.conf
+++ b/files/streams.conf
@@ -1,5 +1,5 @@
 [program:streams]
-command=/opt/ibm/InfoSphere_Streams/4.0.0.0/bin/supervisor-streams.sh
+command=/opt/ibm/InfoSphere_Streams/4.0.0.0/bin/supervisor-streams.rb
 autostart=true
 autorestart=true
 redirect_stderr=true
